--- a/.editorconfig
+++ b/.editorconfig
@@ -16,3 +16,7 @@ insert_final_newline = false
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = false
+
+[{.travis.yml}]
+indent_style = space
+indent_size = 2
